src/snapshots/rura__app__tests__live_mode_confirm.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Confirm entering LIVE mode ──────────────────────────────┐                    "
"                    │                                                          │                    "
"                    │            WARNING: THIS MIGHT BE DANGEROUS!             │                    "
"                    │                                                          │                    "
"                    │   Commands will be executed automatically as you type.   │                    "
"                    │                                                          │                    "
"                    │                       [Y]es / [N]o                       │                    "
"                    │                                                          │                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                   ^C Quit Enter Execute F1 Help                                L:0 "
