src/snapshots/rura__app__tests__main_screen_help_large_screen.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                           ┌ Keys ──────────────────────────────────────┐                           "
"                           │enter        - Execute full command         │                           "
"                           │alt+\        - Execute until cursor         │                           "
"                           │alt+|        - Execute before cursor        │                           "
"                           │alt+i        - Reset input                  │                           "
"                           │                                            │                           "
"                           │f12          - Toggle Live mode             │                           "
"                           │f11          - Toggle Live Until Cursor mode│                           "
"                           │                                            │                           "
"                           │ctrl+s       - Save output to file          │                           "
"                           │ctrl+alt+s   - Save command to file         │                           "
"                           │                                            │                           "
"                           │f3           - Search next                  │                           "
"                           │f4           - Search previous              │                           "
"                           │alt+x        - Toggle regex mode            │                           "
"                           │alt+c        - Toggle case sensitivity      │                           "
"                           │                                            │                           "
"                           │tab          - Complete forward             │                           "
"                           │shift+tab    - Complete backward            │                           "
"                           │                                            │                           "
"                           │alt+left     - Go to previous subcommand    │                           "
"                           │alt+right    - Go to next subcommand        │                           "
"                           │alt+c        - Copy current subcommand      │                           "
"                           │alt+x        - Cut current subcommand       │                           "
"                           │alt+v        - Paste subcommand after       │                           "
"                           │                                            │                           "
"                           │ctrl+p       - History previous item        │                           "
"                           │ctrl+n       - History next item            │                           "
"                           │                                            │                           "
"                           │up           - Scroll up                    │                           "
"                           │down         - Scroll down                  │                           "
"                           │pageup       - Scroll page up               │                           "
"                           │pagedown     - Scroll page down             │                           "
"                           │                                            │                           "
"                           │alt+l        - Scroll right                 │                           "
"                           │alt+h        - Scroll left                  │                           "
"                           │                                            │                           "
"                           │alt+w        - Wrap output lines            │                           "
"                           └────────────────────────────────────────────┘                           "
"                                                                                                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                   ^C Quit Enter Execute F1 Help                                L:0 "
