src/snapshots/rura__app__tests__main_screen_help_narrow_screen.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌ Keys ────────────────────────────────┐"
"│                                      │"
"│               Commands               │"
"│enter        - Execute full command   │"
"│alt+\        - Execute until cursor   │"
"│alt+|        - Execute before cursor  │"
"│alt+i        - Reset input            │"
"│                                      │"
"│f12          - Toggle Live mode       │"
"│f11          - Toggle Live Until Curso│"
"│                                      │"
"│           Subcommand edit            │"
"│alt+left     - Go to previous subcomma│"
"│alt+right    - Go to next subcommand  │"
"│alt+c        - Copy current subcommand│"
"│alt+x        - Cut current subcommand │"
"│alt+v        - Paste subcommand after │"
"│                                      │"
"│              Navigation              │"
"│up           - Scroll up              │"
"│down         - Scroll down            │"
"│pageup       - Scroll page up         │"
"│pagedown     - Scroll page down       │"
"│alt+l        - Scroll right           │"
"│alt+h        - Scroll left            │"
"│                                      │"
"│alt+w        - Wrap output lines      │"
"│                                      │"
"│                  ▼                   │"
"└──────────────────────────────────────┘"
