src/snapshots/rura__app__tests__main_screen_help_small_screen.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                           ┌ Keys ──────────────────────────────────────┐                           "
"                           │                                            │                           "
"                           │enter        - Execute full command         │                           "
"                           │alt+\        - Execute until cursor         │                           "
"                           │alt+|        - Execute before cursor        │                           "
"                           │alt+i        - Reset input                  │                           "
"                           │                                            │                           "
"                           │f12          - Toggle Live mode             │                           "
"                           │f11          - Toggle Live Until Cursor mode│                           "
"                           │                                            │                           "
"                           │ctrl+s       - Save output to file          │                           "
"┌──────────────────────────│ctrl+alt+s   - Save command to file         │──────────────────────────┐"
"│                          │                                            │                          │"
"└──────────────────────────│                     ▼                      │──────────────────────────┘"
"                           └────────────────────────────────────────────┘                       L:0 "
