src/snapshots/rura__app__tests__save_command_popup.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Save command to file ────────────────────────────────────┐                    "
"                    │┌────────────────────────────────────────────────────────┐│                    "
"                    ││command-file.txt                                        ││                    "
"                    │└────────────────────────────────────────────────────────┘│                    "
"                    │                                   Enter Save | Esc Cancel│                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                          ^C Quit Enter Execute F1 Help F11 Live UC F12 Live                    L:0 "
