src/snapshots/rura__app__tests__save_output_popup.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Save output to file ─────────────────────────────────────┐                    "
"                    │┌────────────────────────────────────────────────────────┐│                    "
"                    ││output-file.txt                                         ││                    "
"                    │└────────────────────────────────────────────────────────┘│                    "
"                    │                                   Enter Save | Esc Cancel│                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                          ^C Quit Enter Execute F1 Help F11 Live UC F12 Live                    L:0 "
